Fix drive scrolling on mobile

--- a/src/functional_components/Drive/Drive.module.scss
+++ b/src/functional_components/Drive/Drive.module.scss
@@ -54,7 +54,6 @@
 @media (max-width: $screen_m) {
     .mainArea {
         padding: 0 16px;
-        overflow: auto;
     }
 
     .grid {
